--- a/WeiXinApi/WeiXinApi.csproj
+++ b/WeiXinApi/WeiXinApi.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,10 +44,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MenuWeiXin.cs" />
+    <Compile Include="Model\MenuCreateRequest.cs" />
+    <Compile Include="Model\MenuCreateResponse.cs" />
+    <Compile Include="Model\MenuInfo.cs" />
     <Compile Include="WeiXinConst.cs" />
     <Compile Include="Model\JoinWeiXinRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValideWeiXin.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{bce15743-62b8-486f-9585-619d67dc970e}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
