--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="HttpHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
