--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -49,9 +49,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="DateTimeHelper.cs" />
     <Compile Include="HttpHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XmlHelper.cs" />
+    <Compile Include="XmlWeiXinHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
